--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.5",
     "prettier-plugin-tailwindcss": "^0.2.5",
+    "prisma": "^4.11.0",
     "tailwindcss": "^3.2.7"
   }
 }
