--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
     "react-spinners": "^0.13.8",
+    "sharp": "^0.32.0",
     "swr": "^2.1.0",
     "typescript": "5.0.2",
     "zustand": "^4.3.6"
